# VapourSynth-BilateralGPU

./: CMakeLists.txt  LICENSE  README.md  bilateralGPU.sln
.github/workflows/: linux.yml  windows.yml
bilateralGPU/: bilateral.cpp  bilateralGPU.vcxproj  bilateralGPU.vcxproj.filters
cl_source/: CMakeLists.txt  bilateral.cpp  kernel.hpp
msvc/: VapourSynth-BilateralGPU.sln  VapourSynth-BilateralGPU.vcxproj  VapourSynth-BilateralGPU.vcxproj.filters  VapourSynth-BilateralGPU_RTC.vcxproj
rtc_source/: CMakeLists.txt  bilateral.cpp  kernel.hpp
source/: CMakeLists.txt  bilateral.cpp  kernel.cu
sycl_source/: CMakeLists.txt  kernel.cpp  source.cpp
